refactor(build): adopt canonical conventions